Supercluster/Cluster01/WebServer005/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver005-deployment
  namespace: webserver005
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver005
  template:
    metadata:
      labels:
        app: webserver005
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver005-container
          image: "ghcr.io/eliasdh-com/tereikenbe-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
