Supercluster/Cluster01/WebServer005/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver005-service
  namespace: webserver005
spec:
  selector:
    app: webserver005
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
