Supercluster/Cluster01/WebServer005/Ingress.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver005-ingress
  namespace: webserver005
  annotations:
    cert-manager.io/issuer: "webserver005-letsencrypt-issuer"
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - tereiken.be
      secretName: tereiken-tls
    - hosts:
      - www.tereiken.be
      secretName: wwwtereiken-tls
  rules:
    - host: tereiken.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver005-service
                port:
                  number: 80
    - host: www.tereiken.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver005-service
                port:
                  number: 80
---
